# my_bevy_game

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: events.rs  main.rs  systems.rs
src/enemy/: components.rs  mod.rs  resources.rs  systems.rs
src/game/player/: mod.rs  systems.rs
src/player/: mod.rs  systems.rs
src/score/: mod.rs  resources.rs  systems.rs
src/star/: mod.rs  resources.rs  systems.rs
