[package]
name = "bevy-ball-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.25.2"
rand = "0.8.5"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[toolchain]
channel = "nightly"

[target.x86_64-unknown-linux-gnu]
rustflags = [
  # (Nightly) Make the current crate share its generic instantiations
  "-Zshare-generics=y",
]
